# timefold-quickstarts

./: .gitignore  CONTRIBUTING.adoc  README.adoc  pom.xml  settings.gradle
.github/: dependabot.yml
.github/scripts/: change_versions.sh  run_python_tests.sh
.github/workflows/: pull_request.yml  pull_request_gradle.yml  (+7 more)
hello-world/: build.gradle  pom.xml
python/employee-scheduling/: README.adoc  pyproject.toml
python/employee-scheduling/src/employee_scheduling/: __init__.py  constraints.py  demo_data.py  domain.py  json_serialization.py  rest_api.py  routes.py  solver.py
python/employee-scheduling/static/: app.js  index.html
python/employee-scheduling/static/webjars/timefold/js/: timefold-webui.js
python/employee-scheduling/tests/: test_constraints.py  test_feasible.py
python/school-timetabling/: README.adoc  pyproject.toml
python/school-timetabling/src/school_timetabling/: __init__.py  constraints.py  demo_data.py  domain.py  json_serialization.py  justifications.py  rest_api.py  routes.py  score_analysis.py  solver.py
python/school-timetabling/static/: app.js  index.html
python/school-timetabling/tests/: test_constraints.py  test_feasible.py
python/vehicle-routing/: README.adoc  logging.conf  pyproject.toml
python/vehicle-routing/src/vehicle_routing/: __init__.py  constraints.py  demo_data.py  domain.py  json_serialization.py  justifications.py  rest_api.py  routes.py  score_analysis.py  solver.py
python/vehicle-routing/static/: app.js  index.html  score-analysis.js
python/vehicle-routing/tests/: test_constraints.py  test_feasible.py
(+406 files in other folders)
